@@ -21,3 +21,5 @@ Mark Levedahl <mlevedahl@fallschurch.esys.com> for bug report
 Thomas Walter <walter@pctc.chemie.uni-erlangen.de> for bug reports
 Jean-Bernard ADDOR <jbaddor@sca.uqam.ca> for bug report
 Fabrice Rossi <rossi@ufrmd.dauphine.fr> bug reports and suggestions
+
+Paul Walmsley <pwalmsley@iee.org> for bug report and patch for fixing matmult 
