@@ -1,3 +1,14 @@
+Wed Feb 16 12:03:00 2000  Brian Gough  <bjg@network-theory.co.uk>
+
+	* multiply.c (gsl_la_matmult_mod_impl): fixed error in transposed
+ 	matrix memory access, expressions should always be of the form
+	M->data[i*M->size2 + j] even when i,j are transposed.
+
+	Safer to replace matrix access by gsl_matrix_set and
+ 	gsl_matrix_get, which is what I have done now. Shouldn't be any
+ 	cost in the production version of the library where we have
+ 	inlines and range checking off.
+
 Tue Feb 15 17:46:19 2000  Brian Gough  <bjg@network-theory.co.uk>
 
 	* tridiag.h (solve_cyc_tridiag): fixed typo in header, was
